--- a/samples/msal-node-samples/auth-code-cli-app/package.json
+++ b/samples/msal-node-samples/auth-code-cli-app/package.json
@@ -12,7 +12,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node": "^2.1.0",
     "axios": "^1.4.0",
     "open": "^8.4.0"
   }
