--- a/samples/msal-node-samples/auth-code-pkce/package.json
+++ b/samples/msal-node-samples/auth-code-pkce/package.json
@@ -14,7 +14,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node": "^2.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2"
   },
