--- a/samples/msal-node-samples/device-code/package.json
+++ b/samples/msal-node-samples/device-code/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node": "^2.1.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
