--- a/samples/msal-node-samples/silent-flow/package.json
+++ b/samples/msal-node-samples/silent-flow/package.json
@@ -13,7 +13,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node": "^2.1.0",
     "axios": "^1.4.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.5",
