--- a/samples/msal-node-samples/username-password/package.json
+++ b/samples/msal-node-samples/username-password/package.json
@@ -12,6 +12,6 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0"
+    "@azure/msal-node": "^2.1.0"
   }
 }
