--- a/samples/msal-node-samples/auth-code-pkce/package.json
+++ b/samples/msal-node-samples/auth-code-pkce/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.10.1",
+    "dotenv": "^16.3.1",
     "typescript": "^4.4.3"
   }
 }
