--- a/samples/msal-node-samples/nextjs-rsc-ts/package.json
+++ b/samples/msal-node-samples/nextjs-rsc-ts/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:package": "cd ../../.. && npm run build:all --workspace=lib/msal-node",
     "prod": "next start",
     "start": "next dev",
     "lint": "next lint"
   },
   "dependencies": {
-    "@azure/msal-node": "1.16",
+    "@azure/msal-node": "^2.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
@@ -20,7 +21,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "next": "^13.4.9",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "redis": "^4.6.6",
