--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -1,87 +1,87 @@
 {
-  "$schema": "https://json.schemastore.org/package.json",
-  "name": "@azure/msal-node",
-  "version": "2.4.0",
-  "author": {
-    "name": "Microsoft",
-    "email": "nugetaad@microsoft.com",
-    "url": "https://www.microsoft.com"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
-  },
-  "description": "Microsoft Authentication Library for Node",
-  "keywords": [
-    "js",
-    "ts",
-    "node",
-    "AAD",
-    "msal",
-    "oauth"
-  ],
-  "type": "module",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "module": "./dist/index.mjs",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+    "$schema": "https://json.schemastore.org/package.json",
+    "name": "@azure/msal-node",
+    "version": "2.4.0",
+    "author": {
+        "name": "Microsoft",
+        "email": "nugetaad@microsoft.com",
+        "url": "https://www.microsoft.com"
     },
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "scripts": {
-    "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs",
-    "build:watch": "rollup -c --watch --strictDeprecations --bundleConfigAsCjs",
-    "clean": "shx rm -rf dist lib",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
-    "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node",
-    "prepack": "npm run build:all",
-    "format:check": "npx prettier --ignore-path .gitignore --check src test",
-    "format:fix": "npx prettier --ignore-path .gitignore --write src test"
-  },
-  "beachball": {
-    "disallowedChangeTypes": [
-      "major"
-    ]
-  },
-  "devDependencies": {
-    "@microsoft/api-extractor": "^7.19.4",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@types/jest": "^29.5.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^20.3.1",
-    "@types/sinon": "^7.5.0",
-    "@types/uuid": "^7.0.0",
-    "eslint-config-msal": "^0.0.0",
-    "jest": "^29.5.0",
-    "prettier": "2.8.7",
-    "rollup": "^3.20.1",
-    "sinon": "^7.5.0",
-    "ts-jest": "^29.1.0",
-    "tslib": "^1.10.0",
-    "typescript": "^4.9.5",
-    "yargs": "^17.3.1"
-  },
-  "dependencies": {
-    "@azure/msal-common": "14.3.0",
-    "jsonwebtoken": "^9.0.0",
-    "uuid": "^8.3.0"
-  },
-  "engines": {
-    "node": "18 || 20"
-  }
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
+    },
+    "description": "Microsoft Authentication Library for Node",
+    "keywords": [
+        "js",
+        "ts",
+        "node",
+        "AAD",
+        "msal",
+        "oauth"
+    ],
+    "type": "module",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "module": "./dist/index.mjs",
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.mjs"
+        },
+        "./package.json": "./package.json"
+    },
+    "files": [
+        "dist",
+        "src"
+    ],
+    "scripts": {
+        "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs",
+        "build:watch": "rollup -c --watch --strictDeprecations --bundleConfigAsCjs",
+        "clean": "shx rm -rf dist lib",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "lint": "eslint src --ext .ts",
+        "lint:fix": "npm run lint -- --fix",
+        "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node",
+        "prepack": "npm run build:all",
+        "format:check": "npx prettier --ignore-path .gitignore --check src test",
+        "format:fix": "npx prettier --ignore-path .gitignore --write src test"
+    },
+    "beachball": {
+        "disallowedChangeTypes": [
+            "major"
+        ]
+    },
+    "devDependencies": {
+        "@microsoft/api-extractor": "^7.19.4",
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "@rollup/plugin-typescript": "^11.0.0",
+        "@types/jest": "^29.5.0",
+        "@types/jsonwebtoken": "^9.0.1",
+        "@types/node": "^20.3.1",
+        "@types/sinon": "^7.5.0",
+        "@types/uuid": "^7.0.0",
+        "eslint-config-msal": "^0.0.0",
+        "jest": "^29.5.0",
+        "prettier": "2.8.7",
+        "rollup": "^3.20.1",
+        "sinon": "^7.5.0",
+        "ts-jest": "^29.1.0",
+        "tslib": "^1.10.0",
+        "typescript": "^4.9.5",
+        "yargs": "^17.3.1"
+    },
+    "dependencies": {
+        "@azure/msal-common": "14.3.0",
+        "jsonwebtoken": "^9.0.0",
+        "uuid": "^8.3.0"
+    },
+    "engines": {
+        "node": "16|| 18 || 20"
+    }
 }
