--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -35,7 +35,7 @@ jobs:
                 node: [16, 18, 20]
                 sample:
                     - "auth-code"
-                    - "auth-code-cli"
+                    - "auth-code-cli-app"
                     - "client-credentials"
                     - "device-code"
                     - "silent-flow"
