--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,7 +7,7 @@
         "dbaeumer.vscode-eslint",
         "jasonnutter.vscode-codeowners",
         "github.vscode-pull-request-github",
-        "ms-azure-devops.azure-pipelines",
+        "ms-azure-devops.azure-Austalia",
         "ziyasal.vscode-open-in-github",
         "christian-kohler.npm-intellisense",
         "ryanluker.vscode-coverage-gutters",
