--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -1,78 +1,78 @@
 {
-  "name": "@azure/msal-node-extensions",
-  "version": "1.0.7",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
-  },
-  "license": "MIT",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "module": "./dist/index.mjs",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+    "name": "@azure/msal-node-extensions",
+    "version": "1.0.7",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
     },
-    "./package.json": "./package.json"
-  },
-  "keywords": [
-    "js",
-    "ts",
-    "node",
-    "AAD",
-    "msal",
-    "extensions"
-  ],
-  "files": [
-    "dist",
-    "bin"
-  ],
-  "engines": {
-    "node": "18 || 20"
-  },
-  "scripts": {
-    "compile": "node-gyp rebuild",
-    "clean": "shx rm -rf dist bin",
-    "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.cjs",
-    "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node-extensions",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
-    "format:check": "npx prettier --ignore-path .gitignore --check src test",
-    "format:fix": "npx prettier --ignore-path .gitignore --write src test",
-    "prepack": "npm run build:all && node ./scripts/checkBinaries.cjs"
-  },
-  "author": {
-    "name": "Microsoft",
-    "email": "nugetaad@microsoft.com",
-    "url": "https://www.microsoft.com"
-  },
-  "beachball": {
-    "disallowedChangeTypes": [
-      "major"
-    ]
-  },
-  "dependencies": {
-    "@azure/msal-common": "14.4.0",
-    "@azure/msal-node-runtime": "^0.13.6-alpha.0",
-    "keytar": "^7.8.0"
-  },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-typescript": "^11.1.0",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.3.1",
-    "eslint-config-msal": "^0.0.0",
-    "jest": "^29.5.0",
-    "node-addon-api": "^6.1.0",
-    "rollup": "^3.20.2",
-    "shx": "^0.3.4",
-    "ts-jest": "^29.1.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.9.5"
-  }
+    "license": "MIT",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "module": "./dist/index.mjs",
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.mjs"
+        },
+        "./package.json": "./package.json"
+    },
+    "keywords": [
+        "js",
+        "ts",
+        "node",
+        "AAD",
+        "msal",
+        "extensions"
+    ],
+    "files": [
+        "dist",
+        "bin"
+    ],
+    "engines": {
+        "node": "16 || 18 || 20"
+    },
+    "scripts": {
+        "compile": "node-gyp rebuild",
+        "clean": "shx rm -rf dist bin",
+        "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.cjs",
+        "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node-extensions",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
+        "lint": "eslint src --ext .ts",
+        "lint:fix": "npm run lint -- --fix",
+        "format:check": "npx prettier --ignore-path .gitignore --check src test",
+        "format:fix": "npx prettier --ignore-path .gitignore --write src test",
+        "prepack": "npm run build:all && node ./scripts/checkBinaries.cjs"
+    },
+    "author": {
+        "name": "Microsoft",
+        "email": "nugetaad@microsoft.com",
+        "url": "https://www.microsoft.com"
+    },
+    "beachball": {
+        "disallowedChangeTypes": [
+            "major"
+        ]
+    },
+    "dependencies": {
+        "@azure/msal-common": "14.4.0",
+        "@azure/msal-node-runtime": "^0.13.6-alpha.0",
+        "keytar": "^7.8.0"
+    },
+    "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.0.2",
+        "@rollup/plugin-typescript": "^11.1.0",
+        "@types/jest": "^29.5.1",
+        "@types/node": "^20.3.1",
+        "eslint-config-msal": "^0.0.0",
+        "jest": "^29.5.0",
+        "node-addon-api": "^6.1.0",
+        "rollup": "^3.20.2",
+        "shx": "^0.3.4",
+        "ts-jest": "^29.1.0",
+        "tslib": "^2.0.0",
+        "typescript": "^4.9.5"
+    }
 }
