--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@azure/msal-browser": "^3.5.0",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.0",
@@ -64,12 +65,9 @@
     "prettier": "2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^4.6.0",
     "ts-jest": "^29.1.0",
     "tslib": "^2.0.0",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@rollup/plugin-typescript": "^11.1.0",
-    "rollup": "^3.20.2"
   }
 }
