--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lib/msal-angular",
     "lib/msal-react",
     "extensions/msal-node-extensions",
+    "shared-test-utils",
     "samples/e2eTestUtils",
     "samples/msal-browser-samples/*",
     "samples/msal-angular-v3-samples/*",
