--- a/.github/workflows/msal-angular-e2e.yml
+++ b/.github/workflows/msal-angular-e2e.yml
@@ -5,75 +5,76 @@
 name: msal-angular E2E Tests
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, ready_for_review]
-    paths:
-      - 'lib/msal-angular/**/*'
-      - 'lib/msal-browser/**/*'
-      - 'lib/msal-common/**/*'
-      - 'samples/msal-angular-v3-samples/**/*'
-      - 'samples/e2eTestUtils/**/*'
-      - 'samples/package-lock.json'
-      - '!**.md'
-      - '.github/workflows/msal-angular-e2e.yml'
-  merge_group:
-    types: [checks_requested]
+    pull_request:
+        types: [opened, reopened, synchronize, ready_for_review]
+        paths:
+            - "lib/msal-angular/**/*"
+            - "lib/msal-browser/**/*"
+            - "lib/msal-common/**/*"
+            - "samples/msal-angular-v3-samples/**/*"
+            - "samples/e2eTestUtils/**/*"
+            - "samples/package-lock.json"
+            - "!**.md"
+            - ".github/workflows/msal-angular-e2e.yml"
+    merge_group:
+        types: [checks_requested]
 
 concurrency:
-  group: angular-e2e-${{github.ref}}
-  cancel-in-progress: true
+    group: angular-e2e-${{github.ref}}
+    cancel-in-progress: true
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  run-e2e:
-    if: (github.repository == 'AzureAD/microsoft-authentication-library-for-js') && (github.actor != 'dependabot[bot]') && ((github.event.pull_request.head.repo.full_name == github.repository) || (github.event_name == 'merge_group')) && !github.event.pull_request.draft
-    runs-on: ubuntu-latest
+    run-e2e:
+        if: (github.repository == 'AzureAD/microsoft-authentication-library-for-js') && (github.actor != 'dependabot[bot]') && ((github.event.pull_request.head.repo.full_name == github.repository) || (github.event_name == 'merge_group')) && !github.event.pull_request.draft
+        runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        sample:
-        - 'angular15-sample-app'
-        - 'angular16-sample-app'
-        - 'angular-b2c-sample-app'
-        - 'angular-standalone-sample'
+        strategy:
+            fail-fast: false
+            matrix:
+                sample:
+                    - "angular15-sample-app"
+                    - "angular16-sample-app"
+                    - "angular17-sample-app"
+                    - "angular-b2c-sample-app"
+                    - "angular-standalone-sample"
 
-    name: ${{ matrix.sample }}
+        name: ${{ matrix.sample }}
 
-    steps:
-    - uses: actions/checkout@v4
+        steps:
+            - uses: actions/checkout@v4
 
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-          node-version: 18
-          cache: 'npm'
+            - name: Use Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 18
+                  cache: "npm"
 
-    - name: Clean Install
-      run: npm ci --workspace=samples/msal-angular-v3-samples/${{matrix.sample}}
+            - name: Clean Install
+              run: npm ci --workspace=samples/msal-angular-v3-samples/${{matrix.sample}}
 
-    - name: Build packages
-      working-directory: lib/msal-angular
-      run: npm run build:all
+            - name: Build packages
+              working-directory: lib/msal-angular
+              run: npm run build:all
 
-    - name: Build ${{ matrix.sample }}
-      working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
-      run: npm run build
+            - name: Build ${{ matrix.sample }}
+              working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
+              run: npm run build
 
-    - name: E2E Tests
-      working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
-      timeout-minutes: 5
-      env:
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      run: npm run e2e
+            - name: E2E Tests
+              working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
+              timeout-minutes: 5
+              env:
+                  AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+                  AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+                  AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+              run: npm run e2e
 
-    - name: Upload E2E Test Screenshots
-      uses: actions/upload-artifact@v4
-      if: failure()
-      with:
-        name: e2e-test-screenshots
-        path: samples/**/screenshots
+            - name: Upload E2E Test Screenshots
+              uses: actions/upload-artifact@v4
+              if: failure()
+              with:
+                  name: e2e-test-screenshots
+                  path: samples/**/screenshots
