--- a/.pipelines/1p-build.yml
+++ b/.pipelines/1p-build.yml
@@ -17,7 +17,7 @@ resources:
         - repository: 1P
           type: git
           name: IDDP/msal-javascript-1p
-          ref: OBP_PullRequest_hemoral_OJm2sw # TODO change to master
+          ref: master
 
 extends:
     template: v2/OneBranch.NonOfficial.CrossPlat.yml@templates # https://aka.ms/obpipelines/templates
