--- a/samples/msal-angular-v3-samples/angular17-sample-app/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular17-sample-app/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -13,6 +14,7 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
+    "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
@@ -22,6 +24,17 @@
     "lib": [
       "ES2022",
       "dom"
+    ],
+    "paths": {
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ],
+      "@azure/msal-angular": [
+        "../../../node_modules/@azure/msal-angular/dist"
+      ]
+    },
+    "types": [
+      "jest"
     ]
   },
   "angularCompilerOptions": {
