--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "compile": "node-gyp rebuild",
+    "install": "exit 0",
     "clean": "shx rm -rf dist bin",
     "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.cjs",
     "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node-extensions",
