--- a/samples/msal-angular-v3-samples/angular17-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular17-standalone-sample/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "npm run postinstall:msal-angular && ng build",
-    "postinstall:msal-angular": "cd ../../../lib/msal-angular && npm run build && cd dist/ && npm pack && cd ../../../samples/msal-angular-v3-samples/angular17-standalone-sample && npm i ../../../lib/msal-angular/dist/azure-msal-angular-3.0.15.tgz",
+    "postinstall:msal-angular": "node ../sample-scripts/useMsalAngularTarball.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
