--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -32,7 +32,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                node: [16, 18, 20]
+                node: [16, 18, 20, 22]
                 sample:
                     - "auth-code"
                     - "auth-code-cli-app"
