--- a/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run postinstall:msal-angular && ng build",
+    "postinstall:msal-angular": "node ../sample-scripts/useMsalAngularTarball.js",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "jest"
   },
   "private": true,
   "dependencies": {
@@ -15,9 +18,12 @@
     "@angular/compiler": "^18.0.0-next.0",
     "@angular/core": "^18.0.0-next.0",
     "@angular/forms": "^18.0.0-next.0",
+    "@angular/material": "^18.0.0-next.6",
     "@angular/platform-browser": "^18.0.0-next.0",
     "@angular/platform-browser-dynamic": "^18.0.0-next.0",
     "@angular/router": "^18.0.0-next.0",
+    "@azure/msal-angular": "^3.0.16",
+    "@azure/msal-browser": "^3.13.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -28,6 +34,7 @@
     "@angular/compiler-cli": "^18.0.0-next.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
