--- a/samples/msal-angular-v3-samples/angular18-standalone-sample/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular18-standalone-sample/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
@@ -21,6 +22,9 @@
     "lib": [
       "ES2022",
       "dom"
+    ],
+    "types": [
+      "jest"
     ]
   },
   "angularCompilerOptions": {
