--- a/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular18-standalone-sample/package.json
@@ -33,6 +33,8 @@
     "@angular/cli": "^18.0.0-next.5",
     "@angular/compiler-cli": "^18.0.0-next.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
+    "e2e-test-utils": "^0.0.1",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
     "karma": "~6.4.0",
@@ -40,6 +42,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-jest": "^29.1.2",
     "typescript": "~5.4.2"
   }
 }
