--- a/samples/e2eTestUtils/package.json
+++ b/samples/e2eTestUtils/package.json
@@ -11,6 +11,7 @@
         "find-process": "^1.4.4"
     },
     "devDependencies": {
+        "@azure/keyvault-secrets": "^4.8.0",
         "typescript": "^4.9.5"
     },
     "peerDependencies": {
